checkbox alignment fixed

--- a/styles/LoginBox.module.css
+++ b/styles/LoginBox.module.css
@@ -30,7 +30,7 @@
 }
 
 .flexOuter > li > label + * {
-  flex: 1 0 220px;
+  flex: 1 0 20px;
 }
 
 .flexOuter li input {
